--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,122 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* import google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --primary: rgb(24 24 27);
+  --blue: rgb(93, 188, 252);
+  --border: rgba(63, 63, 70, 0.4);
+  --title: rgb(244 244 245);
+  --subtitle: rgb(161 161 170);
+  --bgHeader: rgb(39, 39, 42);
+  --icon-hover: #d4d4d8;
+  --transition: 0.2s;
+  --section-padding: 4rem;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+html {
+  font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+}
+body {
+  background-color: var(--primary);
+  color: #fff;
+}
+.light {
+  --primary: rgb(250, 250, 250);
+  --blue: rgb(0, 149, 246);
+  --border: rgba(202, 202, 202, 0.518);
+  --title: rgb(39 39 42);
+  --subtitle: rgb(82 82 91);
+  --bgHeader: rgb(253, 253, 253);
+  --icon-hover: #333;
+}
+::-webkit-scrollbar {
+  width: 0.7rem;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #292c3b;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: initial;
+  transition: var(--transition);
+}
+button {
+  all: unset;
+}
+button.active {
+  transform: scale(0.9);
+}
+button:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+a:hover,
+button:hover {
+  cursor: pointer;
+}
+input,
+textarea {
+  all: unset;
+}
+.flex {
+  display: flex;
+}
+.padded-section {
+  padding: var(--section-padding) 0;
+  border-bottom: 1px solid var(--border);
+}
+.scrollUp {
+  background-color: rgb(66, 164, 230);
+  color: #fff;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 1.4rem;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  opacity: 0.7;
+}
+.scrollUp:hover {
+  opacity: 1;
+}
+.container {
+  width: 84%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 5rem;
+}
+@media (max-width: 991px) {
+  .container {
+    width: 90%;
+    padding: 0 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    width: 98%;
+    padding: 0 2.4rem;
+  }
+  .scrollUp {
+    width: 2.1rem;
+    height: 2.1rem;
+    font-size: 1rem;
+  }
 }
